objects/FINS_RelationshipsAndControllers__c.object
<CustomObject>
    <fields>
        <fullName>FINS_CIB_Authorized_Signer_for__c</fullName>
        <label>Authorized Signer for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Execution Services</fullName>
                </value>
                <value>
                    <fullName>Convertibles</fullName>
                </value>
                <value>
                    <fullName>Corporate Access</fullName>
                </value>
                <value>
                    <fullName>Corporate Insights</fullName>
                </value>
                <value>
                    <fullName>Credit Default Swaps</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Equity Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Equity Derivatives</fullName>
                </value>
                <value>
                    <fullName>Equity Swaps</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Fixed Income Capital Raising</fullName>
                </value>
                <value>
                    <fullName>Fund Linked Products</fullName>
                </value>
                <value>
                    <fullName>FX Hedging Strategies</fullName>
                </value>
                <value>
                    <fullName>FX NDF</fullName>
                </value>
                <value>
                    <fullName>FX Options</fullName>
                </value>
                <value>
                    <fullName>FX Products</fullName>
                </value>
                <value>
                    <fullName>Industry Experience</fullName>
                </value>
                <value>
                    <fullName>Interest Rate Swaps</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Prime Services</fullName>
                </value>
                <value>
                    <fullName>Private Funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CIB_Controlling__c</fullName>
        <label>Controlling %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Direct_Owner_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Owner Of</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships and Controllers</relationshipLabel>
        <relationshipName>Relationships_and_Controllers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Ownership__c</fullName>
        <label>Ownership %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Related_Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships and Controllers (Related Entity Name)</relationshipLabel>
        <relationshipName>Relationships_and_Controllers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Related_To_Entity__c</fullName>
        <label>Related To Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships and Controllers (Related To Entity)</relationshipLabel>
        <relationshipName>Relationships_and_Controllers2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FINS_CIB_Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Ultimate Beneficial Owner</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Authorized Signer</fullName>
                </value>
                <value>
                    <fullName>KYC Associate</fullName>
                </value>
                <value>
                    <fullName>Key Contact</fullName>
                </value>
                <value>
                    <fullName>Custodian</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Trustor</fullName>
                </value>
                <value>
                    <fullName>Investment Manager</fullName>
                </value>
                <value>
                    <fullName>Fund</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relationships and Controllers</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relationships and Controllers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships and Controllers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>